--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 marshmallow==3.8.0
 marshmallow-sqlalchemy==0.23.1
+psycopg2-binary==2.8.6
 python-dateutil==2.8.1
 python-editor==1.0.4
 six==1.15.0
